# directive

./: CHANGELOG.md  PR_MCP_SERVER_AND_CLI.md  README.md  pyproject.toml
.cursor/: mcp.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
directive/: agent_context.md
directive/reference/: agent_context.md  agent_operating_procedure.md
directive/reference/templates/: implementation_template.md  spec_template.md
directive/specs/20250916-mcp-server-and-cli/: impact.md  pr.md  spec.md
directive/specs/20250917-mcp-tools-discovery/: impact.md  tdr.md
directive/specs/20250922-pypi-release-workflow/: spec.md
directive/specs/20250924-mcp-autostart/: spec.md  tdr.md
directive/specs/20250924-release-workflow-detection-fix/: spec.md  tdr.md
directive/specs/20250926-cursor-project-rules-and-init/: tdr.md
directive/specs/20251015-branch-creation-requirement/: tdr.md
directive/specs/20251015-cursor-rules-only/: spec.md
directive/specs/20251031-spec-ordering/: impact.md  implementation_summary.md  spec.md  tdr.md
directive/specs/20251105-selective-update/: impact.md  implementation_summary.md  spec.md  tdr.md
directive/specs/branch-creation-requirement/: impact.md  implementation.md  implementation_summary.md  spec.md  tdr.md
directive/specs/cursor-project-rules-and-init/: impact.md  spec.md
directive/specs/cursor-rules-only/: impact.md  implementation.md  implementation_summary.md  tdr.md
directive/specs/mcp-autostart/: impact.md
docs/: agent_context.md  agent_operating_procedure.md
docs/templates/: tdr_template.md
src/directive/: __init__.py  bundles.py  cli.py  release.py  server.py
tests/: conftest.py  test_bundles.py  test_cli.py  test_packaging.py  test_server.py
(+19 files in other folders)
