[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "directive"
version = "0.0.1"
description = "Minimal placeholder package to reserve the name."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Adam Draper" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["placeholder"]

[project.urls]
Homepage = "https://github.com/adamwdraper/directive"
Repository = "https://github.com/adamwdraper/directive"
Issues = "https://github.com/adamwdraper/directive/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/directive"]


