[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "directive"
version = "0.0.1"
description = "Directive CLI and MCP server scaffolding for file-driven agent context."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Adam Draper" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["directive", "mcp", "cli", "agent", "templates"]

dependencies = []

[project.scripts]
directive = "directive.cli:main"

[project.urls]
Homepage = "https://github.com/adamwdraper/directive"
Repository = "https://github.com/adamwdraper/directive"
Issues = "https://github.com/adamwdraper/directive/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/directive"]

[tool.hatch.build]
include = [
  "src/directive/data/**",
]


